--- a/index.html
+++ b/index.html
@@ -23,24 +23,30 @@
     <header class="page-header">
       <div class="container">
         <div class="head-box">
-          <nav class="head-nav">
-            <a href="./index.html" class="logo">
-              <span class="logo-left">Web</span>Studio</a
-            >
-            <ul class="site-nav">
-              <li class="nav-item">
-                <a href="./index.html" class="link current">Студія</a>
+          <a class="logo" href="./index.html">
+            <span class="page-header__logo">Web</span>Studio</a
+          >
+          <nav class="navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="./index.html" class="navigation__link current"
+                  >Студія</a
+                >
               </li>
-              <li class="nav-item">
-                <a href="./portfolio.html" class="link">Портфоліо</a>
+              <li class="navigation__item">
+                <a href="./portfolio.html" class="navigation__link"
+                  >Портфоліо</a
+                >
               </li>
-              <li class="nav-item"><a href="" class="link">Контакти</a></li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">Контакти</a>
+              </li>
             </ul>
           </nav>
-          <ul class="auth-nav">
-            <li class="nav-item">
+          <ul class="contact">
+            <li class="contact__item">
               <a
-                class="contact-link imail-nav"
+                class="contact__link imail-nav"
                 href="mailto:info@devstudio.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
@@ -51,9 +57,9 @@
                 info@devstudio.com</a
               >
             </li>
-            <li class="nav-item">
+            <li class="contact__item">
               <a
-                class="contact-link telf-nav"
+                class="contact__link telf-nav"
                 href="tel:+380961111111"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
@@ -79,158 +85,56 @@
             Замовити послугу
           </button>
         </div>
-        <div class="backdrop is-hidden" data-modal>
-          <div class="modal" data-box>
-            <button
-              class="button-back"
-              type="button"
-              title="Close"
-              data-modal-close
-            >
-              <svg class="button-back-img" width="18" height="18">
-                <use href="./images/icon.svg/sprite.svg#close-black"></use>
-              </svg>
-            </button>
-            <p class="modal-title-txt">
-              Залишіть свої дані, ми вам перезвонимо
-            </p>
-            <form
-              class="modal-form-box"
-              action="#"
-              method="post"
-              autocomplete="off"
-            >
-              <label class="label-for-modal" for="name-of-user">Ім'я</label>
-              <div class="input-info">
-                <input
-                  class="user-name"
-                  type="text"
-                  id="name-of-user"
-                  name="user-name"
-                  required
-                />
-                <svg class="modal-user" width="18px" height="18px">
-                  <use
-                    href="./images/icon.svg/sprite.svg#icon-modal-persone"
-                  ></use>
-                </svg>
-              </div>
-              <label class="label-for-modal" for="phone-of-user">Телефон</label>
-              <div class="input-info">
-                <input
-                  class="user-phone"
-                  type="tel"
-                  id="phone-of-user"
-                  name="user-phone"
-                />
-                <svg class="modal-user" width="18px" height="18px">
-                  <use
-                    href="./images/icon.svg/sprite.svg#icon-modal-phone"
-                  ></use>
-                </svg>
-              </div>
-              <label class="label-for-modal" for="email-of-user">Пошта</label>
-              <div class="input-info">
-                <input
-                  class="user-email"
-                  type="email"
-                  id="email-of-user"
-                  name="user-email"
-                />
-                <svg class="modal-user" width="20px" height="16px">
-                  <use
-                    href="./images/icon.svg/sprite.svg#icon-modal-email"
-                  ></use>
-                </svg>
-              </div>
-              <label class="label-for-modal" for="for-user-comment"
-                >Коментарі</label
-              >
-              <textarea
-                class="for-user-comment"
-                id="for-user-comment"
-                name="comment-of-user"
-                placeholder="Введіть текст"
-              ></textarea>
-              <label class="terms-of-consent" for="daw-frame">
-                <input
-                  class="daw-frame"
-                  type="checkbox"
-                  id="daw-frame"
-                  value="conditions"
-                  name="user-conditions"
-                />
-                <span class="checked-box"></span>
-                <svg class="icon-check" width="16px" height="15">
-                  <use
-                    href="./images/icon.svg/sprite.svg#icon-icon-check"
-                  ></use>
-                </svg>
-                <span class="accept-txt">
-                  Погоджуюсь із розсилкою та приймаю
-                </span>
-                <a class="contract-info" href="#">Умови договору</a>
-              </label>
-              <button
-                class="button send-button"
-                type="submit"
-                name="form-modal-button"
-              >
-                Відправити
-              </button>
-            </form>
-          </div>
-        </div>
       </section>
       <!-- Section 2 -->
-      <section class="section about">
-        <div class="container">
+      <section class="section">
+        <div class="container about-us">
           <h2 class="visually-hidden">Про Нас</h2>
-          <ul class="about-us-list">
-            <li class="content-box icon-details">
-              <div class="svg-about-us">
-                <svg class="icon-about-us" width="70" height="70">
+          <ul class="about-us__list">
+            <li class="about-us__box">
+              <div class="about-us__backraund">
+                <svg class="about-us__icon" width="70" height="70">
                   <use href="./images/icon.svg/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="about-us">ПРИСКІПЛИВІСТЬ ДО ДЕТАЛЕЙ</h3>
-              <p class="about-us-txt">
+              <h3 class="about-us__title">ПРИСКІПЛИВІСТЬ ДО ДЕТАЛЕЙ</h3>
+              <p class="about-us__text">
                 Ідейні міркування, а також початок повсякденної роботи по
                 формуванню напрямів.
               </p>
             </li>
-            <li class="content-box icon-punctuality">
-              <div class="svg-about-us">
-                <svg class="icon-about-us" width="70" height="70">
+            <li class="about-us__box">
+              <div class="about-us__backraund">
+                <svg class="about-us__icon" width="70" height="70">
                   <use href="./images/icon.svg/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="about-us">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="about-us-txt">
+              <h3 class="about-us__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="about-us__text">
                 Задачі организації полягають в підтримці, а особливо у вчасному
                 навчанні кадрів на місці.
               </p>
             </li>
-            <li class="content-box icon-planning">
-              <div class="svg-about-us">
-                <svg class="icon-about-us" width="70" height="70">
+            <li class="about-us__box">
+              <div class="about-us__backraund">
+                <svg class="about-us__icon" width="70" height="70">
                   <use href="./images/icon.svg/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="about-us">ПЛАНУВАННЯ</h3>
-              <p class="about-us-txt">
+              <h3 class="about-us__title">ПЛАНУВАННЯ</h3>
+              <p class="about-us__text">
                 Рівнозначним образом, консультація в значній степені обумовлена
                 широким активом компанії.
               </p>
             </li>
-            <li class="content-box icon-technology">
-              <div class="svg-about-us">
-                <svg class="icon-about-us" width="70" height="70">
+            <li class="about-us__box">
+              <div class="about-us__backraund">
+                <svg class="about-us__icon" width="70" height="70">
                   <use href="./images/icon.svg/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="about-us">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="about-us-txt">
+              <h3 class="about-us__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="about-us__text">
                 Значимість цих проблем настільки очевидна, як і реалізація
                 плановых завдань.
               </p>
@@ -583,7 +487,7 @@
         <div class="footer-box">
           <div class="footef-addres-box">
             <a class="logo-footer" href="./index.html">
-              <span class="logo-left">Web</span>Studio</a
+              <span class="page-footer__logo">Web</span>Studio</a
             >
             <address class="footer-address">
               <ul class="footer-contact">
@@ -689,6 +593,96 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal" data-box>
+        <button
+          class="button-back"
+          type="button"
+          title="Close"
+          data-modal-close
+        >
+          <svg class="button-back-img" width="18" height="18">
+            <use href="./images/icon.svg/sprite.svg#close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-title-txt">Залишіть свої дані, ми вам перезвонимо</p>
+        <form
+          class="modal-form-box"
+          action="#"
+          method="post"
+          autocomplete="off"
+        >
+          <label class="label-for-modal" for="name-of-user">Ім'я</label>
+          <div class="input-info">
+            <input
+              class="user-name"
+              type="text"
+              id="name-of-user"
+              name="user-name"
+              required
+            />
+            <svg class="modal-user" width="18px" height="18px">
+              <use href="./images/icon.svg/sprite.svg#icon-modal-persone"></use>
+            </svg>
+          </div>
+          <label class="label-for-modal" for="phone-of-user">Телефон</label>
+          <div class="input-info">
+            <input
+              class="user-phone"
+              type="tel"
+              id="phone-of-user"
+              name="user-phone"
+            />
+            <svg class="modal-user" width="18px" height="18px">
+              <use href="./images/icon.svg/sprite.svg#icon-modal-phone"></use>
+            </svg>
+          </div>
+          <label class="label-for-modal" for="email-of-user">Пошта</label>
+          <div class="input-info">
+            <input
+              class="user-email"
+              type="email"
+              id="email-of-user"
+              name="user-email"
+            />
+            <svg class="modal-user" width="20px" height="16px">
+              <use href="./images/icon.svg/sprite.svg#icon-modal-email"></use>
+            </svg>
+          </div>
+          <label class="label-for-modal" for="for-user-comment"
+            >Коментарі</label
+          >
+          <textarea
+            class="for-user-comment"
+            id="for-user-comment"
+            name="comment-of-user"
+            placeholder="Введіть текст"
+          ></textarea>
+          <label class="terms-of-consent" for="daw-frame">
+            <input
+              class="daw-frame"
+              type="checkbox"
+              id="daw-frame"
+              value="conditions"
+              name="user-conditions"
+            />
+            <span class="checked-box"></span>
+            <svg class="icon-check" width="16px" height="15">
+              <use href="./images/icon.svg/sprite.svg#icon-icon-check"></use>
+            </svg>
+            <span class="accept-txt"> Погоджуюсь із розсилкою та приймаю </span>
+            <a class="contract-info" href="#">Умови договору</a>
+          </label>
+          <button
+            class="button send-button"
+            type="submit"
+            name="form-modal-button"
+          >
+            Відправити
+          </button>
+        </form>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
