--- a/portfolio.html
+++ b/portfolio.html
@@ -23,25 +23,31 @@
     <header class="page-header">
       <div class="container">
         <div class="head-box">
-          <nav class="head-nav">
-            <a href="./index.html" class="logo">
-              <span class="logo-left">Web</span>Studio</a
-            >
-            <ul class="site-nav">
-              <li class="nav-item">
-                <a href="./index.html" class="link">Студія</a>
+          <a class="logo" href="./index.html">
+            <span class="page-header__logo">Web</span>Studio</a
+          >
+          <nav class="navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="./index.html" class="navigation__link">Студія</a>
               </li>
-              <li class="nav-item">
-                <a href="./portfolio.html" class="link current">Портфоліо</a>
+              <li class="navigation__item">
+                <a href="./portfolio.html" class="navigation__link current"
+                  >Портфоліо</a
+                >
               </li>
-              <li class="nav-item"><a href="" class="link">Контакти</a></li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">Контакти</a>
+              </li>
             </ul>
           </nav>
-          <ul class="auth-nav">
-            <li class="nav-item">
+          <ul class="contact">
+            <li class="contact__item">
               <a
-                class="contact-link imail-nav"
+                class="contact__link imail-nav"
                 href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
               >
                 <svg class="envelope" width="16" height="12">
                   <use href="./images/icon.svg/sprite.svg#icon-envelope"></use>
@@ -49,8 +55,13 @@
                 info@devstudio.com</a
               >
             </li>
-            <li class="nav-item">
-              <a class="contact-link telf-nav" href="tel:+380961111111">
+            <li class="contact__item">
+              <a
+                class="contact__link telf-nav"
+                href="tel:+380961111111"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+              >
                 <svg class="smartphone" width="10" height="16">
                   <use
                     href="./images/icon.svg/sprite.svg#icon-smartphone"
