--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 target="_blank"
                 rel="noopener nofollow noreferrer"
               >
-                <svg class="contact__envelope" width="16" height="12">
+                <svg class="envelope" width="16" height="12">
                   <use href="./images/icon.svg/sprite.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -64,7 +64,7 @@
                 target="_blank"
                 rel="noopener nofollow noreferrer"
               >
-                <svg class="contact__smartphone" width="10" height="16">
+                <svg class="smartphone" width="10" height="16">
                   <use
                     href="./images/icon.svg/sprite.svg#icon-smartphone"
                   ></use>
