--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <div class="head-box">
           <a class="logo" href="./index.html">
-            <span class="page-header__logo">Web</span>Studio</a
+            <span class="header__logo">Web</span>Studio</a
           >
           <nav class="navigation">
             <ul class="navigation__list">
@@ -487,7 +487,7 @@
         <div class="footer-box">
           <div class="footef-addres-box">
             <a class="logo-footer" href="./index.html">
-              <span class="page-footer__logo">Web</span>Studio</a
+              <span class="footer__logo">Web</span>Studio</a
             >
             <address class="footer-address">
               <ul class="footer-contact">
